# claude_code_run2

./: document-processing-flow.html  frontend-changes.md
.claude/commands/: implement-feature.md
starting-ragchatbot-codebase/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
starting-ragchatbot-codebase/backend/: .coverage  ai_generator.py  app.py  search_tools.py
starting-ragchatbot-codebase/backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_system_integration.py  test_vector_store.py
starting-ragchatbot-codebase/frontend/: script.js  style.css
starting-ragchatbot-codebase/scripts/: format.sh  lint.sh  quality.sh  test.sh  typecheck.sh
