[project]
name = "starting-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb==1.0.15",
    "anthropic==0.58.2",
    "sentence-transformers==5.0.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.1.1",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.0",
    "httpx>=0.27.0",  # Required for FastAPI TestClient
]

[tool.black]
line-length = 100
target-version = ["py313"]
exclude = '''
/(
    \.venv
  | venv
  | chroma_db
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".venv", "venv", "chroma_db"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
]
ignore = ["E501"]  # Line length handled by Black

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
# Test discovery
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options
addopts = [
    "-v",                    # Verbose output
    "--strict-markers",      # Strict marker enforcement
    "--tb=short",           # Shorter traceback format
    "--disable-warnings",   # Suppress warnings for cleaner output
    "-ra",                  # Show summary of all test outcomes
    "--cov=backend",        # Coverage for backend
    "--cov-report=html",    # HTML coverage report
    "--cov-report=term-missing",  # Terminal coverage report
]

# Markers for test categorization
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests across components",
    "api: API endpoint tests",
    "slow: Tests that take significant time to run",
]

[tool.coverage.run]
source = ["backend"]
omit = ["backend/tests/*", "*/venv/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
